<resources>
    <string name="app_name">Reminder App</string>
    <string name="action_bar_name">Reminders</string>
    <string name="action_create">create reminder</string>
    <string name="apply">Apply</string>
    <string name="select_date_and_time">Select Date and Time</string>
    <string name="title">Title</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="reminder">Reminder</string>
    <string name="delete_all">Delete All</string>
    <string name="search">Search</string>
    <string name="date_added">Date Added</string>
    <string name="reminder_name">Reminder Name</string>
    <string name="time_added">time added</string>
    <string name="dismiss">Dismiss</string>
    <string name="swipe_right_to_dismiss">swipe_right_to_dismiss</string>
    <string name="time_expired">time_expired</string>
    <string name="snooze">Snooze</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>