<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".UI.MainActivity">

    <item
            android:id="@+id/action_create"
            android:icon="@drawable/ic_add"
            android:title="@string/action_create"
            app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_search"
        android:title="@string/search"
        android:icon="@drawable/ic_search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView" /> <!-- KONTOL GA JELAS ASU -->
    <item
        android:id="@+id/action_delete_all"
        android:title="@string/delete_all"
        android:icon="@drawable/ic_delete"
        app:showAsAction="ifRoom"
        />

</menu>